[package]
name = "codecrafters-http-server"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2024"

[dependencies]
anyhow = "1.0.100"   # error handling
bytes = "1.10.1"     # helps manage buffers
thiserror = "2.0.17" # error handling
http = "1.3.1"
radix_trie = "0.3.0"
